Created a new template for iticse and thereafter changed the page type of iticse blog posts to iticse which use the iticse template to display the blog post correctly

--- a/_data/banners.yml
+++ b/_data/banners.yml
@@ -1,4 +1,4 @@
-- title: The Technical Symposium
+- title: The Technical Symposium Edit
   url: events/symposia/index.html
   image: files/images/home/2020canceled.jpg
   imagealt: SIGCSE 2020 Canceled due to Virus
